# mb2-rotary-encoder

./: Cargo.toml  README.md
src/: boilerplate.rs  lib.rs  lib_bad.rs
