[package]
name = "mb2-rotary-encoder"
version = "0.1.0"
edition = "2024"
authors = ["Bart Massey <bart.massey@gmail.com>"]
license-file = "LICENSE.txt"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
panic-rtt-target = "0.2"
rotary-encoder-embedded = "0.4.0"
rotary-encoder-hal = "0.6.0"
rtt-target = "0.6.1"

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
